# UCAS-MachineLearning-Homework

./: .gitignore  README.md  pyproject.toml
ex1-house-price-prediction/: main.py
ex2-bias-and-variance/: main.py
ex3-liner-regression-and-classification/: assignment.md  main.py
ex4-SVM/: assignment.md  main.py
ex5-Adaboosting/: assignment.md  main.py
ex6-NN-1/: assignment.md  main.py
ex7-NN-2/: assignment.md  main.py  results_table.md
project-sentiment-analysis/: demo_inference.py  report-zhangjunwei.md  run_cmds.md  run_sentiment.py
project-sentiment-analysis/BiLSTM/: README.md  data_loader.py  ensemble_inference.py  model.py  pyproject.toml  train_full_data.py  utils.py
project-sentiment-analysis/TextCNN/: Readme.md  batch_predict.py  hyperparam_search.py  run_experiments.py  text_cnn.py  text_cnn_predict.py
project-sentiment-analysis/transformer/: run_sentiment.py
