[project]
name = "sentiment-analysis-on-movie-reviews"
version = "0.1.0"
description = "电影评论情感分析 - 基于BiLSTM的5分类模型"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "filelock>=3.20.1",
]
